# unFTP

./: .git-blame-ignore-revs  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  LICENSE  Makefile  README.md  RELEASE-CHECKLIST.md  alpine-debug.Dockerfile.template  alpine-istio-debug.Dockerfile.template  alpine-istio.Dockerfile.template  alpine.Dockerfile.template  build.rs  doctave.yaml  full.Dockerfile.template  gnubuilder.Dockerfile.template  index.html  licensing.html  minimal.Dockerfile.template  muslrust.Dockerfile.template  rustfmt.toml  scratch.Dockerfile.template  search_index.json  support.html
.github/workflows/: ci.yml  rust.yml
assets/: doctave-style.css
crates/googlelog/: Cargo.toml  Makefile
crates/googlelog/src/: error.rs  lib.rs  logger.rs  shipper.rs
crates/redislog/: CONTRIBUTING.md  Cargo.toml  Makefile  README.md
crates/redislog/src/: lib.rs
docs/: README.md  licensing.md  support.md
docs/libunftp/: README.md
docs/server/: README.md  anti-brute.md  cloud-storage.md  docker.md  ftps.md  gcs.md  http-usr.md  installation.md  jsonconfig.md  logging.md  monitoring.md  proxy-protocol.md  pubsub.md  rest.md  starting.md  tokio-console.md
libunftp/: index.html
packaging/arch/: PKGBUILD  README.md  unftp.service
packaging/docker/: alpine-debug.Dockerfile.ci  alpine-istio-debug.Dockerfile.ci  alpine-istio.Dockerfile.ci  alpine.Dockerfile.ci  scratch.Dockerfile.ci
server/: anti-brute.html  cloud-storage.html  docker.html  ftps.html  gcs.html  http-usr.html  index.html  installation.html  jsonconfig.html  logging.html  monitoring.html  proxy-protocol.html  pubsub.html  rest.html  starting.html  tokio-console.html
site/: index.html  licensing.html  search_index.json  support.html
site/libunftp/: index.html
site/server/: anti-brute.html  docker.html  ftps.html  gcs.html  http-usr.html  index.html  installation.html  jsonconfig.html  logging.html  monitoring.html  proxy-protocol.html  pubsub.html  rest.html  starting.html  tokio-console.html
src/: app.rs  args.rs  auth.rs  config.rs  domain.rs  http.rs  logging.rs  main.rs  metrics.rs  notify.rs  redislog.rs  storage.rs  user.rs
src/domain/: events.rs  mod.rs  user.rs
src/infra/: mod.rs  pubsub.rs  userdetail_default.rs  userdetail_http.rs  userdetail_json.rs  usrdetail_json.rs  workload_identity.rs
src/storage/: choose.rs  chooser.rs  mod.rs  restrict.rs  rooter.rs
web/: index.html
