[package]
name = "slog-google"
description = "Google Logging drain for slog-rs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = [
    "Rob klein Gunnewiek <rkleingunnewiek@bol.com>"
]
keywords = ["slog", "logging", "log", "google", "gcp"]
categories = ["development-tools::debugging"]
homepage = "https://github.com/bolcom/unFTP/tree/master/crates/googlelog"
repository = "https://github.com/bolcom/unFTP/tree/master/crates/googlelog"

[features]
shipper = []

[dependencies]
google-logging2 = "5.0.5"
serde_json = "1.0.140"
chrono = "0.4.41"
tokio = { version = "1.45.1", features = ["macros", "time", "rt-multi-thread"] }
slog = "2.7.0"
thiserror = "1.0.69"
reqwest = { version = "0.12.18", default-features = false, features = ["rustls-tls", "json"] }
