[package]
name = "slog-google"
description = "Google Logging drain for slog-rs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = [
    "Rob klein Gunnewiek <rkleingunnewiek@bol.com>"
]
keywords = ["slog", "logging", "log", "google", "gcp"]
categories = ["development-tools::debugging"]
homepage = "https://github.com/bolcom/unFTP/tree/master/crates/googlelog"
repository = "https://github.com/bolcom/unFTP/tree/master/crates/googlelog"

[features]
shipper = []

[dependencies]
google-logging2 = "5.0.5"
serde_json = "1.0.146"
chrono = "0.4.42"
tokio = { version = "1.48.0", features = ["macros", "time", "rt-multi-thread"] }
slog = "2.8.2"
thiserror = "2.0.17"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "json"] }
