[package]
name = "slog-redis"
description = "Redis drain for slog-rs"
version = "0.1.0"
authors = ["Hannes de Jager <hdejager@bol.com>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["slog", "logging", "log", "redis"]
categories = ["development-tools::debugging"]
documentation = "https://docs.rs/slog-redis"
homepage = "https://github.com/bolcom/unFTP/tree/master/crates/redislog"
repository = "https://github.com/bolcom/unFTP/tree/master/crates/redislog"
readme = "README.md"

[dependencies]
chrono = "0.4.6"
r2d2 = "0.8.3"
r2d2_redis = "0.8.0"
redis = "0.9.0"
serde_json = "1.0.57"
slog = { version = "2.4.1", features = ["max_level_trace", "release_max_level_info"] }
