[package]
name = "slog-redis"
description = "Redis drain for slog-rs"
version = "0.1.2"
authors = ["Hannes de Jager <hdejager@bol.com>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["slog", "logging", "log", "redis"]
categories = ["development-tools::debugging"]
documentation = "https://docs.rs/slog-redis"
homepage = "https://github.com/bolcom/unFTP/tree/master/crates/redislog"
repository = "https://github.com/bolcom/unFTP/tree/master/crates/redislog"
readme = "README.md"

[dependencies]
chrono = "0.4.19"
r2d2 = "0.8.9"
r2d2_redis = "0.14.0"
redis = "0.20.0"
serde_json = "1.0.68"
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_info"] }


[dev-dependencies]
slog-async = "2.7.0"